# natl

./: .gitattributes  .gitignore  .gitmodules  .nctsettings  CMakeLists.txt  CMakePresets.json  README.md  Standard.nasl  todo.txt
docs/: test.md  (+1 more)
natl/: CMakeLists.txt  CMakeSources.cmake  edit.txt
natl/natl/: algorithm.h  all.h  allocater.cpp  allocator.cpp  allocator.h  any.h  array.h  arrayView.h  atomic.h  basicTypes.h  batchPool.h  bitArray.h  bits.h  characterTest.h  colony.h  commonHashs.h  compare.h  compilerDependent.h  container.h  coroutines.h  dataMovement.h  dynArray.h  dynamicArray.h  error.h  expect.h  filesystem.cpp  filesystem.h  flatHashMap.h  format.h  functionCache.h  functional.h  fundamental.h  generator.h  hash.h  heapArray.h  iteration.h  iterators.h  lexicographicalCompare.h  limits.h  math.h  (+59 more)
natl/natl/container/: all.h  any.h  array.h  arrayView.h  batchPool.h  bitArray.h  colony.h  container.h  dynArray.h  flatHashMap.h  flatHashSet.h  functionCache.h  functional.h  heapArray.h  partitioner.h  persistentHashMap.h  persistentHashSet.h  priorityQueue.h  smallDynArray.h  string.h  stringView.h  variant.h  view.h
natl/natl/fundamental/: expect.h  observerPtr.h  option.h  optionPtr.h  owningPtr.h  pair.h  strongType.h  tuple.h
natl/natl/math/: all.h  basicFloatOperations.h  constants.h  exponential.h  hyperbolic.h  power.h  satruatedArithmetic.h  standard.h  trigonometric.h
natl/natl/processing/: all.h  format.h  generator.h  serialization.h  serializationJump.h  serializationUtils.h
natl/natl/serialization/: all.h  base.h  basicCompatibility.h  basicSerializations.h  compatibility.h  error.h  jump.h  serializations.h  utils.h
natl/natl/simd/: all.h  cmaskOperations.h  math.h  operations.h  simdBase.h  simdClass.h  simdOf.h  standardArch.h
natl/natl/sync/: all.h  atomic.h  mutex.cpp  mutex.h  once.h  smartThread.h  synchronizedValue.h  thread.cpp  thread.h
natl/natl/system/: all.h  filesystem.cpp  filesystem.h  nullptr.cpp  nullptr.h  nullptrUtils.cpp  nullptrUtils.h  print.cpp  print.h  printColor.cpp  printColor.h  printFormatted.h  timer.cpp  timer.h
natl/natl/units/: all.h  base.h  categoryConversion.h  freedom.h  imperial.h  metric.h  standard.h
natl/natl/util/: algorithm.h  all.h  allocParts.h  allocater.cpp  allocator.cpp  allocator.h  assert.h  basicTypes.h  bits.h  bytes.h  cast.h  castMacros.h  characterTest.h  commonHashs.h  compare.h  compilerDependent.h  coroutines.h  dataMovement.h  enum.h  enumUtils.h  error.h  executionSession.cpp  executionSession.h  executionSessionMacros.h  expect.h  funcArgs.h  hash.h  iteration.h  iterators.h  lexicographicalCompare.h  limits.h  main.h  mainMacros.h  memory.cpp  memory.h  mixin.h  numerics.h  observerPtr.h  option.h  optionPtr.h  (+24 more)
natlModules/: CMakeLists.txt  CMakeSources.cmake
natlModules/natlModules/: container.ixx  error.ixx  functional.ixx  iterators.ixx  optional.ixx  partitioner.ixx  pointer.ixx  repeat.ixx  test.ixx  timer.cpp  timer.ixx  typeTraits.ixx  uninitialized.ixx  view.ixx
tests/: CMakeLists.txt  testUtils.cmake  testUtils.h
tests/Partitioner/: CMakeLists.txt  main.cpp
tests/any/: main.cpp
tests/array/: main.cpp
tests/arrayView/: main.cpp
tests/atomic/: main.cpp
tests/bits/: main.cpp
tests/cast/: main.cpp
tests/colony/: main.cpp
tests/container/: any_utest.cpp  array_utest.cpp  batchPool_utest.cpp  colony_utest.cpp  dynArray_utest.cpp  flatHashMap_utest.cpp  flatHashSet_utest.cpp  functional_utest.cpp  hashMapTests.h  hashSetTests.h  heapArray_utest.cpp  persistentHashMap_utest.cpp  persistentHashSet_utest.cpp  priorityQueue_utest.cpp  string_utest.cpp  variant_utest.cpp
tests/container/any/: main.cpp
tests/container/batchPool/: main.cpp
tests/container/dynArray/: main.cpp
tests/container/flatHashSet/: main.cpp
tests/container/functional/: main.cpp
tests/container/partitioner/: main.cpp
tests/container/persistentHashMap/: main.cpp
tests/container/persistentHashSet/: main.cpp
tests/container/priorityQueue/: main.cpp
tests/container/string/: main.cpp
tests/container/variant/: main.cpp
tests/dataMovement/: main.cpp
tests/dynArray/: main.cpp
tests/dynamicArray/: main.cpp
tests/enum/: main.cpp
tests/expect/: main.cpp
tests/filesystem/: main.cpp
tests/flatHashMap/: main.cpp
tests/format/: main.cpp
tests/functionCache/: main.cpp
tests/functional/: main.cpp
tests/functional/dynArray/: main.cpp
tests/fundamental/option/: main.cpp
tests/fundamental/tuple/: main.cpp
tests/generator/: main.cpp
tests/heapArray/: main.cpp
tests/iteration/: main.cpp
tests/limits/: main.cpp
tests/math/: main.cpp  math_utest.cpp
tests/option/: main.cpp
tests/optional/: main.cpp
tests/partition/: main.cpp
tests/pointer/: main.cpp
tests/pool/: main.cpp
tests/print/: main.cpp
tests/priorityQueue/: main.cpp
tests/processing/: format_utest.cpp  generator_utest.cpp
tests/processing/format/: main.cpp
tests/processing/generator/: main.cpp
tests/reflection/: main.cpp
tests/serialization/: main.cpp
tests/simd/: main.cpp  simd_utest.cpp
tests/string/: main.cpp
tests/stringConvert/: main.cpp
tests/sync/: atomic_utest.cpp  synchronizedValue_utest.cpp
tests/sync/atomic/: main.cpp
tests/synchronizedValue/: main.cpp
tests/system/: filesystem_utest.cpp  print_utest.cpp  thread_utest.cpp  timer_utest.cpp
tests/thread/: main.cpp
tests/timer/: main.cpp
tests/tuple/: main.cpp
tests/typeInfo/: main.cpp
tests/typePack/: main.cpp
tests/uninitialized/: main.cpp
tests/units/: main.cpp  units_utest.cpp
tests/util/: algorithm_utest.cpp  allocParts_utest.cpp  basicTypes_utest.cpp  bits_utest.cpp  cast_utest.cpp  dataMovement_utest.cpp  enum_utest.cpp  executionSession_utest.cpp  expect_utest.cpp  functionCache_utest.cpp  iteration_utest.cpp  limits_utest.cpp  memory_utest.cpp  mixin_utest.cpp  option_utest.cpp  pointer_utest.cpp  reflection_utest.cpp  stateful_utest.cpp  stringConvert_utest.cpp  test_utest.cpp  tuple_utest.cpp  typeInfo_utest.cpp  typePack_utest.cpp
tests/variant/: main.cpp
(+24 files in other folders)
