#LIBARY
add_library(natl)
set(NATL_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}" CACHE PATH INTERNAL)

#SOURCES
include(CMakeSources.cmake)

#OPTIONS
set_property(TARGET natl PROPERTY CXX_STANDARD 20)

if(NACMAKE_WARNINGS)
	ENABLE_WARNINGS(natl TRUE)
endif()

if(NACMAKE_PROFILING)
	ENABLE_PROFILING(natl)
endif()

#OUTPUT
SET_STANDARD_OUTPUT(natl)