#LIBARY
add_library(natl)
set(NATL_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}" CACHE PATH INTERNAL)

#SOURCES
include(CMakeSources.cmake)

#OPTIONS
set_property(TARGET natl PROPERTY CXX_STANDARD 20)

if(NACTEMPLATE_WARNINGS)
	ENABLE_WARNINGS(natl TRUE)
endif()

if(NACTEMPLATE_PROFILING)
	ENABLE_PROFILING(natl)
endif()

#OUTPUT
SET_STANDARD_OUTPUT(natl)

#BUILD 
set_target_properties(natl PROPERTIES UNITY_BUILD ON)